--- a/arrays/index.html
+++ b/arrays/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <script src="./data.js"
+        <script src="./op1.js"
         type="text/javascript"></script>
 
     </head>
